welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: not found: value Maths
	if (Maths.aps(a-b)>=10 || Maths.aps(a-c)>=10 || Maths.aps(b-c)>=10) {
            ^